--- a/src/css/Styles.css
+++ b/src/css/Styles.css
@@ -205,3 +205,116 @@ ul	/**Nav bar position**/
 #menu {
   background: #000;
 }
+#menu img {
+  width: 100%;
+}
+/*********************GALLERY*********************/
+#gallery {
+  background-size: cover;
+  object-fit: fill;
+  height: 700px;
+  position: relative;
+  z-index: -1;
+  padding: 0;
+  margin: 0;
+  background-color: white;
+}
+.gcenterdiv {
+  background-color: none;
+  width: 900px;
+  height: 100%;
+  margin: 0 auto;
+}
+#gallery img {
+  width: 100%;
+}
+.galimg {
+  border: 6px solid white;
+  /* width: 100%; */
+  -moz-transition: all 0.1s;
+  -webkit-transition: all 0.1s;
+  transition: all 0.1s;
+}
+.galimagediv,
+.galimagediv1 {
+  background-color: yellow;
+  position: relative;
+  overflow: visible;
+  width: 200px;
+  height: 130px;
+  left: 0;
+  padding-bottom: 30px;
+}
+
+.galimagediv:hover,
+.galimagediv1:hover .galimg {
+  -webkit-transform: scale(1.2);
+  -moz-transform: scale(1.2);
+  -o-transform: scale(1.2);
+  transform: scale(1.2);
+  z-index: 100;
+  position: relative;
+}
+
+.galimage {
+  filter: gray; /* IE6-9 */
+  -webkit-filter: grayscale(1); /* Google Chrome, Safari 6+ & Opera 15+ */
+  -webkit-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
+  -moz-box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
+  box-shadow: 0px 2px 6px 2px rgba(0, 0, 0, 0.75);
+  margin-bottom: 20px;
+}
+
+.galimage:hover {
+  filter: none; /* IE6-9 */
+  -webkit-filter: grayscale(0); /* Google Chrome, Safari 6+ & Opera 15+ */
+}
+
+.shine_me {
+  cursor: pointer;
+  margin-bottom: 10px;
+  margin-top: 10px;
+}
+/*********************PLACE*********************/
+#place {
+  background-color: black;
+  height: auto;
+  padding: 0;
+}
+#bottomdiv {
+  background: url("../images/place.jpg") center center no-repeat scroll;
+  background-size: 100%;
+  width: 100%;
+  height: 600px;
+  position: relative;
+}
+/*********************MAP*********************/
+#location {
+  height: 300px;
+  margin: 0;
+  padding: 0;
+  z-index: -1;
+  position: relative;
+}
+iframe {
+  width: 100%;
+  height: 300px;
+  border: 0;
+}
+#location div {
+  background-color: rgba(0, 0, 0, 0.2);
+  margin: 0 auto;
+  width: 300px;
+  height: 40px;
+  z-index: 2;
+  position: absolute;
+  left: 50%;
+  top: 50%;
+  transform: translate(-50%, -50%);
+  text-align: center;
+  padding: 30px;
+  border-radius: 5px;
+  font-size: 15px;
+  font-weight: bold;
+}
+/*********************FOOTER*********************/
