--- a/src/css/Styles.css
+++ b/src/css/Styles.css
@@ -24,6 +24,7 @@ header a {
   margin: 40px 0;
 }
 .header-intro p {
+  font-size: 0.8em;
   margin-bottom: 0;
 }
 
@@ -212,7 +213,6 @@ ul	/**Nav bar position**/
 #gallery {
   background-size: cover;
   object-fit: fill;
-  height: 700px;
   position: relative;
   z-index: -1;
   padding: 0;
@@ -230,7 +230,6 @@ ul	/**Nav bar position**/
 }
 .galimg {
   border: 6px solid white;
-  /* width: 100%; */
   -moz-transition: all 0.1s;
   -webkit-transition: all 0.1s;
   transition: all 0.1s;
@@ -240,7 +239,7 @@ ul	/**Nav bar position**/
   background-color: yellow;
   position: relative;
   overflow: visible;
-  width: 200px;
+  /* width: 200px; */
   height: 130px;
   left: 0;
   padding-bottom: 30px;
@@ -278,16 +277,23 @@ ul	/**Nav bar position**/
 /*********************PLACE*********************/
 #place {
   background-color: black;
+  background: url("../images/place.jpg") center center no-repeat scroll;
+  background-size: cover;
+
   height: auto;
   padding: 0;
+
+  width: 100%;
+  height: 600px;
+  position: relative;
 }
-#bottomdiv {
+/* #bottomdiv {
   background: url("../images/place.jpg") center center no-repeat scroll;
   background-size: 100%;
   width: 100%;
   height: 600px;
   position: relative;
-}
+} */
 /*********************MAP*********************/
 #location {
   height: 300px;
@@ -318,93 +324,115 @@ iframe {
   font-weight: bold;
 }
 /*********************FOOTER*********************/
-body {
-  font-family: "Signika", sans-serif;
-}
-.bg-grey {
-  background: #292929;
-}
-.logo-footer {
-  margin-bottom: 40px;
-}
-footer {
-  color: grey;
-}
-footer p,
-a {
-  font-size: 12px;
-  font-family: "Roboto", sans-serif;
-}
-footer h6 {
-  font-family: "Playfair Display", serif;
-  margin-bottom: 40px;
-  position: relative;
-}
-footer h6:after {
-  position: absolute;
-  content: "";
-  background: grey;
-  width: 12%;
-  height: 1px;
-  left: 0;
-  bottom: -20px;
-}
-.btn-footer {
-  color: grey;
+/* Start section Fotrer */
 
-  text-decoration: none;
-  border: 1px solid;
-  border-radius: 43px;
-  font-size: 13px;
-  padding: 7px 30px;
-  line-height: 47px;
+.footer-wrap {
+  background: url(http://hassandesigns.top/html/classified/images/footer-bg.jpg)
+    no-repeat top;
+  padding-top: 30px;
+  background-size: cover;
 }
-.btn-footer:hover {
-  text-decoration: none;
+
+.footer-wrap h3 {
+  color: #fff;
+  font-size: 18px;
+  font-weight: bold;
+  text-transform: uppercase;
+  margin-bottom: 30px;
 }
-.form-footer input[type="text"] {
-  border: none;
-  border-radius: 16px 0 0 16px;
-  outline: none;
-  padding-left: 10px;
+
+.footer-wrap p {
+  font-size: 14px;
+  line-height: 24px;
+  color: #b3b3b3;
+  margin-top: 15px;
 }
-::placeholder {
-  font-size: 10px;
-  padding-left: 10px;
+
+.footer-wrap p a {
+  color: #fff;
+  text-decoration: underline;
   font-style: italic;
 }
-.form-footer input[type="button"] {
-  border: none;
-  background: #232323;
-  margin-left: -5px;
-  color: #fff;
-  outline: none;
-  border-radius: 0 16px 16px 0;
-  padding: 2px 12px;
-}
-.social .fa {
-  color: grey;
-  font-size: 22px;
-  padding: 10px 15px;
-  background: #3c3c3c;
-}
-footer ul li {
-  list-style: none;
-  display: block;
-}
-footer ul {
-  padding-left: 0;
-}
-footer ul li a {
+
+.footer-wrap p a:hover {
   text-decoration: none;
-  color: grey;
+  color: #ff7800;
+}
+
+.footer-links li a {
+  font-size: 14px;
+  line-height: 26px;
+  color: #b3b3b3;
   text-decoration: none;
 }
-a:hover {
+
+.footer-links li:before {
+  content: "\f105";
+  font-family: "FontAwesome";
+  padding-right: 10px;
+  color: #b3b3b3;
+}
+
+.footer-category li a {
+  font-size: 14px;
+  line-height: 26px;
+  color: #b3b3b3;
   text-decoration: none;
-  color: #f5f5f5 !important;
 }
-.logo-part {
-  border-right: 1px solid grey;
-  height: 100%;
+
+.footer-category li:before {
+  content: "\f105";
+  font-family: "FontAwesome";
+  padding-right: 10px;
+  color: #b3b3b3;
 }
+
+.address {
+  color: #b3b3b3;
+  font-size: 14px;
+  position: relative;
+  padding-left: 30px;
+  line-height: 30px;
+}
+
+.address:before {
+  content: "\f277";
+  font-family: "FontAwesome";
+  position: absolute;
+  top: 0;
+  left: 0;
+}
+
+.info a {
+  color: #b3b3b3;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
+.fa-phone:before {
+  content: "\f095";
+}
+
+.info a {
+  color: #b3b3b3;
+  font-size: 14px;
+  line-height: 30px;
+  font-weight: normal;
+}
+
+.fa-fax:before {
+  content: "\f1ac";
+}
+
+.copyright {
+  border-top: 1px solid #5f5f5f;
+  font-size: 14px;
+  color: #b3b3b3;
+  margin-top: 25px;
+  padding-top: 10px;
+  text-align: center;
+  padding-bottom: 10px;
+}
+
+/* End section Fotrer */
